index route in barbersController setup

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -10,7 +10,7 @@
     <h1>Barber App</h1>
 
     <a href="/users">Click Here To See All Users In This Database</a> <br>
-    <a href="/barbers">Click Here To See All Photos In This Database</a>
+    <a href="/barbers">Click Here To See All Barbers In This Database</a>
 
 </body>
 </html>
