users routes and pages working

--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -7,6 +7,31 @@
     <title>USERS EDIT PAGE</title>
 </head>
 <body>
-    <h1>Users Edit Page:</h1>
+
+    <header>
+    </header>
+
+    <main>
+        <h1>Users Edit Page:</h1>
+        
+        <ul>
+            <li>Username: <%= user.username %></li>
+            <li>Password: <%= user.password %></li>
+            <li>Barbers: <%= user.barbers %></li>
+        </ul>
+
+        <form action='/users/<%=user._id%>?_method=DELETE' method="POST">
+            <input type="submit" value='Delete User'>
+        </form>
+
+        <nav>
+            <ul>
+                <li><a href='/'>Return To Homepage</a></li>
+                <li><a href='/users'>Users Index</a></li>
+            </ul>
+        </nav>
+
+    </main>
+    
 </body>
 </html>
