--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,6 +7,28 @@
     <title>USERS INDEX PAGE</title>
 </head>
 <body>
+
+    <header>
     <h1>Users Index Page:</h1>
+
+    <nav>
+        <ul>
+            <li><a href='/'>Return To Homepage</a></li>
+            <li><a href='/users/new'>Create A New User</a></li>
+        </ul>
+    </nav>
+    </header>
+
+    <main>
+        <h1>Users:</h1>
+        <ul>
+            <% for(let i = 0; i < users.length; i++) { %>
+                <li>
+                    <a href='/users/<%=users[i].id%>'><%= users[i].username %></a>
+                </li>
+            <% } %>
+        </ul>   
+    </main> 
+    
 </body>
 </html>
