--- a/views/barbers/new.ejs
+++ b/views/barbers/new.ejs
@@ -7,6 +7,26 @@
     <title>BARBERS NEW PAGE</title>
 </head>
 <body>
-    <h1>Barbers New Page:</h1>
+
+    <header>
+        <h1>Barbers New Page:</h1>
+
+        <nav>
+            <ul>
+                <li><a href='/'>Return To Homepage</a></li>
+                <li><a href='/barbers'>Barbers Index</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <main>
+        <form action="/barbers" method="POST">
+            Username: <input type="text" name="username" value="username">
+            Password: <input type="password" name="password" value="password">
+            <button type="submit">Add Barber</button>
+        </form>
+    </main>
+    
 </body>
 </html>
