--- a/views/barbers/show.ejs
+++ b/views/barbers/show.ejs
@@ -17,7 +17,7 @@
         <ul>
             <li>Username: <%= barber.username %></li>
             <li>Password: <%= barber.password %></li>
-            <!-- <li>Users: <%= barber.users %></li> -->
+            <li>Customers: <%= barber.users %></li>
         </ul>
 
         <form action='/barbers/<%=barber._id%>?_method=DELETE' method="POST">
