--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -17,7 +17,12 @@
         <form action="/users/<%=user._id%>?_method=PUT" method="POST">
             Username:<input type="text" name="username" value="<%=user.username%>">
             Password:<input type="text" name="password" value="<%=user.password%>">
-            Barbers:<input type="text" name="barbers" value="<%=user.barbers%>">
+            Barbers:<select type="radio" name="barberId">
+                        <% user.barbers.forEach((barber) => { %>
+                            <option value="<%= barber._id %>"><%=barber.username%></option>
+                        <% }) %>
+                    </select> <br>
+
         <button type="submit">Update User</button>
         </form>
 
