--- a/views/barbers/edit.ejs
+++ b/views/barbers/edit.ejs
@@ -17,16 +17,11 @@
         <form action="/barbers/<%=barber._id%>?_method=PUT" method="POST">
             Username:<input type="text" name="username" value="<%=barber.username%>">
             Password:<input type="text" name="password" value="<%=barber.password%>">
-            Customers: <select name="userId">
-                            <% for(i = 0; i < user.length; i++) { %>
-                                <option value="<%= user[i]._id %>"><%=user[i].username%></option>
-                            <% } %>
-                        </select> <br>
         <button type="submit">Update Barber</button>
         </form>
 
         <form action="/barbers/<%=barber._id%>?_method=DELETE" method="POST" >
-            <input type="submit" value="Delete User">
+            <input type="submit" value="Delete Barber">
         </form>
 
         <nav>
