Added login and registration and encryption

--- a/views/barbers/edit.ejs
+++ b/views/barbers/edit.ejs
@@ -36,6 +36,10 @@
             </ul>
         </nav>
 
+        <form action="/auth/logout" method="GET" >
+            <input type="submit" value="Logout">
+        </form>
+
     </main>
     
 </body>
