--- a/views/barbers/show.ejs
+++ b/views/barbers/show.ejs
@@ -28,6 +28,10 @@
             <a href='/barbers/<%=barber._id%>/edit'>Edit Barber</a>
         </button>
 
+        <form action="/auth/logout" method="GET" >
+            <input type="submit" value="Logout">
+        </form>
+
         <nav>
             <ul>
                 <li><a href='/'>Return To Homepage</a></li>
