--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -10,7 +10,10 @@
     <h1>Barber App</h1>
 
     <a href="/users">Click Here To See All Users In This Database</a> <br>
-    <a href="/barbers">Click Here To See All Barbers In This Database</a>
+    <a href="/barbers">Click Here To See All Barbers In This Database</a><br>
+    <form action="/auth/logout" method="GET" >
+        <input type="submit" value="Logout">
+    </form>
 
 </body>
 </html>
