--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,12 @@
 <body>
     <h1>Login Page:</h1>
 
-    <form action="/login" method="POST">
+    <form action="/auth/login" method="POST">
         Username: <input type="text" name="username">
         Password: <input type="password" name="password">
         <input type="submit" value="Log In">
     </form>
+
+    <button><a href="/auth/register">Register Here!</a></button>
 </body>
 </html>
