--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -32,6 +32,9 @@
             </ul>
         </nav>
 
+        <form action="/auth/logout" method="GET" >
+            <input type="submit" value="Logout">
+        </form>
     </main>
     
 </body>
