--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -26,6 +26,9 @@
             Password: <input type="password" name="password" value="password">
             <button type="submit">Add User</button>
         </form>
+        <form action="/auth/logout" method="GET" >
+            <input type="submit" value="Logout">
+        </form>
     </main>
     
 </body>
