--- a/views/barbers/index.ejs
+++ b/views/barbers/index.ejs
@@ -27,7 +27,10 @@
                     <a href='/barbers/<%=barbers[i].id%>'><%= barbers[i].username %></a>
                 </li>
             <% } %>
-        </ul>   
+        </ul>  
+        <form action="/auth/logout" method="GET" >
+            <input type="submit" value="Logout">
+        </form> 
     </main> 
     
 </body>
