--- a/views/barbers/new.ejs
+++ b/views/barbers/new.ejs
@@ -30,7 +30,9 @@
                 <% } %>
             </select> <br>
             <button type="submit">Add Barber</button>
-
+        </form>
+        <form action="/auth/logout" method="GET" >
+            <input type="submit" value="Logout">
         </form>
     </main>
     
