--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -27,6 +27,10 @@
         <button>
             <a href='/users/<%=user._id%>/edit'>Edit User</a>
         </button>
+        
+        <form action="/auth/logout" method="GET" >
+            <input type="submit" value="Logout">
+        </form>
 
         <nav>
             <ul>
