--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href='/'>Return To Homepage</a></li>
-            <li><a href='/users/new'>Create A New User</a></li>
+            <!-- <li><a href='/users/new'>Create A New User</a></li> -->
         </ul>
     </nav>
     </header>
