--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -16,7 +16,7 @@
         
         <ul>
             <li>Username: <%= user.username %></li>
-            <li>Password: <%= user.password %></li>
+            <!-- <li>Password: <%= user.password %></li> -->
             <li>Barbers: <% user.barbers.forEach((barber)=>{ %>
                     <%=barber.username %>
             <% }) %></li>
