--- a/views/barbers/show.ejs
+++ b/views/barbers/show.ejs
@@ -17,7 +17,7 @@
         
         <ul>
             <li>Username: <%= barber.username %></li>
-            <li>Password: <%= barber.password %></li>
+            <!-- <li>Password: <%= barber.password %></li> -->
             <li>Customers: <%= barber.users %></li>
         </ul>
 
