--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Login Page:</h1>
-
+    <% if(typeof message !== "undefined") { %>
+        <%= message %>
+    <% } %>
     <form action="/auth/login" method="POST">
         Username: <input type="text" name="username">
         Password: <input type="password" name="password">
