--- a/views/barbers/new.ejs
+++ b/views/barbers/new.ejs
@@ -11,7 +11,7 @@
 
     <header>
         <h1>Barbers New Page:</h1>
-
+        <% include ../partials/_navbar %>
         <nav>
             <ul>
                 <li><a href='/'>Return To Homepage</a></li>
