--- a/views/barbers/show.ejs
+++ b/views/barbers/show.ejs
@@ -14,7 +14,7 @@
 
     <main>
         <h1>Barbers Show Page:</h1>
-        
+        <% include ../partials/_navbar %>
         <ul>
             <li>Username: <%= barber.username %></li>
             <!-- <li>Password: <%= barber.password %></li> -->
