--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -4,9 +4,9 @@
                 <li><a href='/'>Return To Homepage</a></li>
                 <li><a href='/users'>Users Index</a></li>
                 <li><a href='/barbers'>Barbers Index</a></li>
-            } else { 
-                Login
-                Register
+            <% } else { %>
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register Here!</a></li>
             <% } %>
             
     </ul>
