--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Users New Page:</h1>
-
+        <% include ../partials/_navbar %>
         <nav>
             <ul>
                 <li><a href='/'>Return To Homepage</a></li>
