--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -13,7 +13,7 @@
 
     <main>
         <h1>Users Show Page:</h1>
-        
+        <% include ../partials/_navbar %>
         <ul>
             <li>Username: <%= user.username %></li>
             <!-- <li>Password: <%= user.password %></li> -->
