--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Barber App</h1>
+    <h1>Welcome:</h1>
 
-    <a href="/users">Click Here To See All Users In This Database</a> <br>
-    <a href="/barbers">Click Here To See All Barbers In This Database</a><br>
+    <a href="/users">Looking For A Haircut</a> <br>
+    <a href="/barbers">I'm A Barber</a><br>
     <form action="/auth/logout" method="GET" >
         <input type="submit" value="Logout">
     </form>
