--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -12,12 +12,6 @@
     <header>
     <h1>Users Index Page:</h1>
         <% include ../partials/_navbar %>
-    <nav>
-        <ul>
-            <li><a href='/'>Return To Homepage</a></li>
-            <!-- <li><a href='/users/new'>Create A New User</a></li> -->
-        </ul>
-    </nav>
     </header>
 
     <main>
@@ -35,10 +29,10 @@
             <% for(let i = 0; i < barbers.length; i++) { %>
                 <li>
                     <a href='/barbers/<%=barbers[i].id%>'><%= barbers[i].username %></a>
-                    <% if(barbers[i].seatStatus == false){ %>
-                        <%= barbers[i].seatStatus %>
+                    <% if(barbers[i].seatStatus == true){ %>
+                        <%= "This Barber Is Available"%>
                     <% }else{ %>
-                        <% console.log(barbers[i].seatStatus); %>
+                        <%= "This Barber Is Busy" %>
                     <% } %>   
                 </li>
             <% } %>
