--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,7 @@
 body {
-    background-color: red;
+    background-image: url("http://freedombarbersf.com/wp-content/uploads/2015/07/freedombarbersf_banner1.jpg");
+    background-position: center;
+    color: white;
 }
 
 
