--- a/views/barbers/show.ejs
+++ b/views/barbers/show.ejs
@@ -16,35 +16,31 @@
         <h1>Barbers Show Page:</h1>
         <% include ../partials/_navbar %>
         <ul>
-            <li>Username: <%= barber.username %></li>
+            <li>Barber: <%= barber.username %></li>
             <!-- <li>Password: <%= barber.password %></li> -->
-            <li>Customers: <%= barber.users %></li>
+            <li>Current Customer:<% if(barber.seatStatus == false){ %>
+                <%= `${user.username} Is On The Way` %>
+              <%  }else{ %>
+                    <%= "None" %>
+             <% } %> </li>
             <li> Seat Status:
-                <% if(barber.seatStatus == true){ %>
-                    <%= "This Barber Is Available"%>
+                <% if(barber.seatStatus === true){ %>
+                    <%= "I'm Available"%>
                 <% }else{ %>
-                    <%= "This Barber Is Busy" %>
+                    <%= "I'm Not Available" %>
                 <% } %>   
             </li>
         </ul>
-
-        <form action="/barbers/<%=barber._id%>?_method=PUT" method="POST">
-        Username:<input type="text" name="username" value="<%=barber.username%>">
-        Password:<input type="text" name="password" value="<%=barber.password%>">
-        Seat Status:<label class="switch">
-                    <input type="checkbox"  name="seatStatus">
-                    <span class="slider round"></span>
-                    </label>
-        <button type="submit">Update Barber</button>
-        </form>
+        
 
         <form action='/barbers/<%=barber._id%>?_method=DELETE' method="POST">
             <input type="submit" value='Delete My Barber Profile'>
         </form>
 
-        <button>
-            <a href='/barbers/<%=barber._id%>/edit'>Set Seat Status / Edit Profile</a>
-        </button>
+            <button>
+                <a href='/barbers/<%=barber._id%>/edit'>Set Seat Status / Edit Profile</a>
+            </button>
+        </form>
 
         <form action="/auth/logout" method="GET" >
             <input type="submit" value="Logout">
