--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,14 @@ body {
     background-image: url("http://freedombarbersf.com/wp-content/uploads/2015/07/freedombarbersf_banner1.jpg");
     background-position: center;
     color: white;
+    font-family: 'Bree Serif', serif;
+}
+.test {
+  background-image: url("http://freedombarbersf.com/wp-content/uploads/2015/07/freedombarbersf_banner1.jpg");
+  background-position: center;
+  color: white;
+  font-family: 'Bree Serif', serif;
+  margin: 10px
 }
 
 
