--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
         <input type="submit" value="Log In">
     </form>
 
-    <button><a href="/auth/register">Register Here!</a></button>
+    <button class="register"><a href="/auth/register">Register Here!</a></button>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
