--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,11 +13,8 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="test">
-    <h1>The Barber App</h1>
+    <h1 class='loginTitle'>The Barber App</h1>
     
-
-
-    <h5>Login:</h5>
     <% if(typeof message !== "undefined") { %>
         <%= message %>
     <% } %>
