--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="test">
-    <h1 class='loginTitle'>The Barber App</h1>
+    <h1 class='loginTitle'>The Barber App (aka The Usual)</h1>
     
     <% if(typeof message !== "undefined") { %>
         <%= message %>
