--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,11 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<!-- NAV BAR (PARTIALS) -->
 <header>
-    <ul>
-            <% if(typeof user._id !== "undefined"){ %>
-                <li><a href='/'>Return To Homepage</a></li>
-                <li><a href='/users'>Users Index</a></li>
-                <li><a href='/barbers'>Barbers Index</a></li>
-            <% } %>
-    </ul>
+  <nav id="realNavbar" class="navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand" href="#">The Barber App (aka The Usual)</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/users">Users</a>
+        <a class="nav-item nav-link" href="/barbers">Barbers</a>
+      </div>
+    </div>
+  </nav>
 </header>
+</html>
+
+
+
+
+
 
 
