--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,21 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BARBER APP</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <!-- Bootstrap CSS -->
+        <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>BARBER APP HOME</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Welcome:</h1>
 
-    <a href="/users">Looking For A Haircut</a> <br>
-    <a href="/barbers">I'm A Barber</a><br>
+<h1>Welcome:</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <a class="landingFont" href="/users">Looking For A Haircut</a> <br>
+        <a href="/users"><img id="userIndexPic" src="https://melbournechapter.net/images/clippers-vector-barber-chair-1.png"></a>
+    </div>
+    <div class="col">
+        <a  class="landingFont" href="/barbers">I'm A Barber</a> <br>
+        <a href="/barbers"><img id="barberIndexPic" src="https://cdn.onlinewebfonts.com/svg/img_548029.png"></a>
+    </div>
+  </div>
+  <div class="row align-items-center">
     <form action="/auth/logout" method="GET" >
         <input type="submit" value="Logout">
     </form>
-
-
+  </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
