--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BARBER APP</title>
-    <link rel="stylesheet" href="/css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>Welcome:</h1>
 
-    <a href="/users">Looking For A Haircut</a> <br>
-    <a href="/barbers">I'm A Barber</a><br>
+    <div class="landingContainer">
+        <div class="landingRow">
+            <div class="landingCol1">
+                <a href="/users">Looking For A Haircut</a>
+            </div>
+            <div class="landingCol2">
+                <a href="/barbers">I'm A Barber</a>
+            </div>
+        </div>
+    </div>
+
     <form action="/auth/logout" method="GET" >
         <input type="submit" value="Logout">
     </form>
