more bootstrap changes

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -19,8 +19,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/users">Users</a>
-        <a class="nav-item nav-link" href="/barbers">Barbers</a>
+        <a class="nav-item nav-link active" href="/users">Users</a>
+        <a class="nav-item nav-link active" href="/barbers">Barbers</a>
       </div>
     </div>
   </nav>
