--- a/views/barbers/index.ejs
+++ b/views/barbers/index.ejs
@@ -10,7 +10,6 @@
 <body>
 
     <header>
-    <h1>Barbers Index Page:</h1>
     <% include ../partials/_navbar %>
     </header>
 
@@ -18,8 +17,7 @@
 
 
 
-        <h1>Currently Registerd Barbers:</h1>
-        <h3>Select Your Profile Below:</h3>
+        <h1>Currently Registerd Barbers: <h4>(Select Your Profile Below)</h4></h1>
         
         <ul>
             <% for(let i = 0; i < barbers.length; i++) { %>
