--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -10,21 +10,26 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <!-- NAV BAR (PARTIALS) -->
-<header>
-  <nav id="realNavbar" class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand" href="#">The Barber App (aka The Usual)</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<header class='navbarHeader'>
+  <nav class="realNavbar navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand" >The Barber App (aka The Usual)</a>
+    <button class="navbar-toggler" id="drop-down" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/users">Users</a>
-        <a class="nav-item nav-link" href="/barbers">Barbers</a>
+        <a class="nav-item nav-link active" id="home-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" id="user-link" href="/users">Users</a>
+        <a class="nav-item nav-link" id="barber-link" href="/barbers">Barbers</a>
       </div>
     </div>
   </nav>
 </header>
+<body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </html>
 
 
