--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <h1>Users:</h1>
+        <h1>Users Currently Looking For Haircuts:</h1>
         <ul>
             <% for(let i = 0; i < users.length; i++) { %>
                 <li>
@@ -27,7 +27,7 @@
             <% } %>
         </ul>  
 
-        <h1>Barbers:</h1>
+        <h1>Current Barber Options:</h1>
         <ul>
             <% for(let i = 0; i < barbers.length; i++) { %>
                 <li>
