--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>USERS REGISTER PAGE</title>
-    <link rel="stylesheet" href="/css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<title>USER REGISTER PAGE</title>
+
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>Users Register Page:</h1>
     <form action="/auth/register" method="POST">
-        Username: <input type="text" name="username" value="username">
+        Username: <input type="text" name="username" value="username"> <br>
         Password: <input type="password" name="password" value="password">
         <button type="submit">Add User</button>
     </form>
