--- a/views/barbers/edit.ejs
+++ b/views/barbers/edit.ejs
@@ -20,14 +20,14 @@
             <!-- Username:<input type="text" name="username" value="<%=barber.username%>">
             Password:<input type="text" name="password" value="<%=barber.password%>"> -->
 
-
-
             <h3>Click "Update Barber" To Let The Barber Know Your On The Way:</h3>
             Seat Status:<label class="switch">
                         <input type="checkbox"  name="seatStatus" >
                         <span class="slider round"></span>
                         </label>
-        <button id="seatStatusBtn" type="submit">Update Barber</button>
+            <button id="seatStatusBtn" type="submit">Update Barber</button>
+
+            <% console.log(barber.seatStatus) %>
         
         </form>
 
