landing page edits

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -18,7 +18,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-        <a class="landingFont" href="/users">Looking For A Haircut</a> <br>
+        <a class="landingFont" href="/users">I'm Looking For A Haircut</a> <br>
         <a href="/users"><img id="userIndexPic" src="https://melbournechapter.net/images/clippers-vector-barber-chair-1.png"></a>
     </div>
     <div class="col">
